Web Inspector: Breakpoints in sourceURL named scripts do not work https://bugs.webkit.org/show_bug.cgi?id=123231

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2013-10-24
Reviewed by Timothy Hatcher.

Source/WebCore:

Remember a Script's sourceURL and sourceMappingURL. When setting a
breakpoint by URL, check it against the sourceURL or original URL.
If a script had a sourceURL that would have been the only URL sent
to the frontend, so that receives priority.

Test: inspector-protocol/debugger/setBreakpointByUrl-sourceURL.html

* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::setBreakpointByUrl):
(WebCore::InspectorDebuggerAgent::didParseSource):
* inspector/InspectorDebuggerAgent.h:
* inspector/ScriptDebugListener.h:

LayoutTests:

* inspector-protocol/debugger/setBreakpointByUrl-sourceURL-expected.txt: Added.
* inspector-protocol/debugger/setBreakpointByUrl-sourceURL.html: Added.

Canonical link: https://commits.webkit.org/141381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157939 268f45cc-cd09-0410-ab3c-d52691b4dbfc